[Film] Fix icon visibility on iPhone

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -688,6 +688,7 @@ body {
                     }
                     .filmSlideContent .videoIcons {
                         bottom: calc_vh(140);
+                        z-index: 1;
                         &.hidden {
                             opacity: 1;
                         }
